--- a/src/ReviewPage.css
+++ b/src/ReviewPage.css
@@ -1,7 +1,12 @@
-
+.rev-container {
+  background-color: aliceblue;
+  background-size: cover;
+  height: 100vh;
+}
 
 .review-h1 {
   text-align: center;
+  margin-top: 0%;
 }
 
 .reviewpage-h3 {
@@ -11,7 +16,6 @@
 
 .label {
   display: flex;
-  border: 1px solid blue;
   border-radius: 10px;
   margin: 2vh 2vw;
   min-width: 15vw;
