--- a/src/ReviewPage.css
+++ b/src/ReviewPage.css
@@ -1,57 +1,67 @@
-.rev-container {
-  background-color: aliceblue;
-  background-size: cover;
-  height: 100vh;
-}
-
 .review-h1 {
   text-align: center;
   margin-top: 0%;
+  padding-top: 5vh;
+  padding-bottom: 3vh;
 }
 
-.reviewpage-h3 {
+.rev-container {
+  background-image: url('https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.rev2-container {
+  margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  
-}
-
-.label {
-  display: flex;
-  border-radius: 10px;
-  margin: 2vh 2vw;
-  min-width: 15vw;
   align-items: center;
-  justify-content: center;
-  padding: 0 1vw;
+  min-height: 70vh;
+  max-height: 70vh;
+  width: 60vw;
 }
 
 .reviews-shown {
   display: flex;
-  justify-content: center;
-
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  max-width: 25vw;
+  width: 20vw;
+  min-height: 33vh;
+  max-height: 33vh;
+  margin: 0 5vh;
+  background-color: rgba(225, 225, 225, 0.365);
 }
 
 .field {
-  display: flex;
-  border: 1px solid black;
-  border-radius: 10px;
-  margin: 2vh 2vw;
-  min-width: 15vw;
-  max-width: 15vw;
-  min-height: 10vh;
-  align-items: center;
-  justify-content: center;
-  padding: 0 1vw;
+  text-align: center;
+  line-height: 3vh;
+
 }
 
-.reviewfield {
-  max-height: 20vh;
-  line-height: 5vh;
+.name-field {
+  margin-top:4vh;
 }
 
-.checked {
-  color: orange;
+.review-field {
+  margin: 0 2vw;
 }
+
+@media only screen and (max-width: 834px) {
+  .rev2-container{
+    width: 100vw;
+  }
+  .reviews-shown {
+    min-height: 20vh;
+    max-height: 22vh;
+    min-width: 35vw;
+    max-width: 35vw;
+  }
+}
+
 
 
 
