--- a/src/SuggestionPage.css
+++ b/src/SuggestionPage.css
@@ -18,12 +18,23 @@
   height: 20vh;
   margin-bottom: 5vh;
 }
+.sug2-container {
+  display: flex;
+}
 
 .suggestion-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   max-height: 10vh;
+  background-color: rgba(16, 14, 14, 0.372);
+  border-radius: 10px;
+  margin: 2vh auto;
+  width: 30vw;
+  max-width: 20vw;
+  min-height: 30vh;
+  max-height: 30vh;
 }
 
 .sug-form {
@@ -32,8 +43,8 @@
   justify-content: center;
   padding: 1vw;
   border-radius: 10px;
-  background-color: rgba(232, 85, 85, 0.2);
-  border: 1px solid black;
+  background-color: rgba(225, 225, 225, 0.365);
+
 }
 
 .sug-form > input {
@@ -45,12 +56,29 @@
   justify-content: center;
   align-items: center;
   color: aliceblue;
+  margin: 0%;
   font-weight: 700;
   border-radius: 10px;
   max-width: 15vw;
-  min-width: 15vw;
-  max-height: 10vh;
   min-height: 10vh;
+}
+
+@media only screen and (max-width: 834px) {
+  .sug2-container{
+    margin-top: 15vh;
+  }
+
+  .sug-form{
+    min-height: 25vh;
+    max-width: 17vw;
+  }
+  .sug-form > input{
+    margin: 2vh;
+  }
+
+  .sug-form > button {
+    margin: 2vh;
+  }
 }
 
 
