--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,7 +1,9 @@
-
+.App {
+  font-family: "Architects Daughter", cursive;
+}
 .home-img {
   height: 100vh;
-  background-image: url('https://images.unsplash.com/photo-1567579518027-7a113279f8ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
+  background-image: url("https://images.unsplash.com/photo-1567579518027-7a113279f8ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
   background-position: center;
   background-size: cover;
 }
@@ -9,7 +11,6 @@
 .home-container {
   display: flex;
   flex-direction: column;
-  
 }
 
 .header-nav {
@@ -27,12 +28,10 @@
   margin: 0 2vw;
 }
 
-
 .h1-home {
   margin-left: 15vw;
   color: aliceblue;
 }
-
 
 .home-form {
   display: flex;
@@ -40,7 +39,7 @@
   justify-content: center;
   width: 20vw;
   height: 40vh;
-  max-width:475px;
+  max-width: 475px;
   padding: 2vw;
   border-radius: 10px;
   margin-left: 7vw;
@@ -48,7 +47,7 @@
 }
 
 form > input {
-  margin: 2vh 0
+  margin: 2vh 0;
 }
 
 form > button {
@@ -64,5 +63,31 @@ form > button {
   .h1-home {
     margin-top: 10vh;
     margin-left: 10vw;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .home-img {
+    background-image: url("https://images.unsplash.com/photo-1569014375989-84af78615331?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+  }
+
+  .home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: burlywood;
+  }
+
+  .home-form {
+    margin-left: 15vw;
+    width: 40vw;
+    height: 40vh;
+    margin-top: 7vh;
+    background-color: rgba(85, 114, 232, 0.42);
+  }
+
+  .h1-home {
+    margin-left: 15vw;
+    color: black;
   }
 }
