--- a/src/ReviewPage.css
+++ b/src/ReviewPage.css
@@ -6,7 +6,7 @@
 }
 
 .rev-container {
-  background-image: url('https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+  background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -26,12 +26,12 @@
 .reviews-shown {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
   border-radius: 10px;
   max-width: 25vw;
   width: 20vw;
-  min-height: 33vh;
-  max-height: 33vh;
+  min-height: 30vh;
+  max-height: 30vh;
   margin: 0 5vh;
   background-color: rgba(225, 225, 225, 0.365);
 }
@@ -39,11 +39,10 @@
 .field {
   text-align: center;
   line-height: 3vh;
-
 }
 
 .name-field {
-  margin-top:4vh;
+  margin-top: 4vh;
 }
 
 .review-field {
@@ -51,18 +50,20 @@
 }
 
 @media only screen and (max-width: 834px) {
-  .rev2-container{
+  .rev2-container {
     width: 100vw;
   }
   .reviews-shown {
-    min-height: 20vh;
-    max-height: 22vh;
+    min-height: 25vh;
+    max-height: 25vh;
     min-width: 35vw;
     max-width: 35vw;
   }
 }
 
-
-
-
-
+@media only screen and (max-width: 375px) {
+  .reviews-shown {
+    margin-top: 3vh;
+    max-height: 40vh;
+  }
+}
