--- a/src/SuggestionPage.css
+++ b/src/SuggestionPage.css
@@ -72,6 +72,7 @@
   border-radius: 10px;
   max-width: 15vw;
   min-height: 10vh;
+  text-align: center;
 }
 
 @media only screen and (max-width: 834px) {
