--- a/src/SuggestionPage.css
+++ b/src/SuggestionPage.css
@@ -54,6 +54,7 @@
 .sug-form > button {
   max-width: 20vw;
   max-height: 6vh;
+  cursor: pointer;
 }
 
 .sug-form > button > img{
@@ -102,11 +103,19 @@
 }
 
 @media only screen and (max-width: 375px) {
+  
   .sug-img {
+    background-image: none;
+    background-color: rgba(0, 0, 0, 0.879);
+  }
+  .img {
     background-image: url("https://images.unsplash.com/photo-1542128486-63a7579e52b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+    min-height: 100%;
+    background-size: cover;
   }
 
   .sug-form {
+    margin-top: 4vh;
     min-width: 30vw;
   }
 
